# vision_tool_crewai

./: README.md  pyproject.toml
src/crewai_vision_tool/: crew.py  main.py
src/crewai_vision_tool/config/: agents.yaml  tasks.yaml
